--- a/salt-minion/Dockerfile
+++ b/salt-minion/Dockerfile
@@ -2,12 +2,14 @@ FROM opensuse:leap
 ENV HTTP_PROXY "http://10.133.132.165:8181"
 ENV HTTPS_PROXY "http://10.133.132.165:8181"
 
-
-MAINTAINER SUSE Containers Team <containers@suse.com>
+MAINTAINER FIT <DevOps@FIT>
 
 RUN zypper ref && \
     zypper -n in salt-minion python-M2Crypto && \
-    zypper clean -a
+    zypper clean -a && \
+    mkdir /srv/salt
+    
+WORKDIR /root/salt-minion
 
 ADD salt-minion.sh /
 
